packages/bia-ia/bia-ia-0.0.2.tar.gz/bia-ia-0.0.2/bia-ia/data/logs/bia_2024_03_25_09_04_.log
Traceback (most recent call last):
  File "./main.py", line 20, in <module>
    from controllers.base import Controller
  File "/Users/tylerdddd/Documents/Git/Otto/controllers/base.py", line 22, in <module>
    from views.app import App
  File "/Users/tylerdddd/Documents/Git/Otto/views/app.py", line 56
    self.text_in = self.speech2Text.get_input().lower() # STT input
    ^
SyntaxError: invalid syntax
